--- a/Desktop/coding/noonaProject/NodeJS/all-about-plant-FE/.gitignore
+++ b/Desktop/coding/noonaProject/NodeJS/all-about-plant-FE/.gitignore
@@ -1,19 +1,25 @@
-# node_modules
-node_modules/
-
-# build output
-dist/
-
-# environment variables
-.env
-
-# logs
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# system
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# VSCode
-.vscode/
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .env
